--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Carousel</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <main>
+      <img src="https://picsum.photos/id/237/1000/500" class="slider" alt="" />
+      <img src="https://picsum.photos/id/236/1000/500" class="slider" alt="" />
+      <img src="https://picsum.photos/id/238/1000/500" class="slider" alt="" />
+      <img src="https://picsum.photos/id/239/1000/500" class="slider" alt="" />
+    </main>
+    <div class="controls">
+      <button onclick="goPrev()" id="prev">&lt;</button>
+      <button onclick="goNext()" id="next">&gt;</button>
+    </div>
+    <script src="./script.js"></script>
+  </body>
 </html>
